<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="25dp"
        android:id="@+id/radioGroup">




        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:text="@string/reset"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:text="@string/save"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            />



    </LinearLayout>

    <SeekBar
        android:id="@+id/redSeekbar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="279dp" />

    <SeekBar
        android:id="@+id/greenSeekbar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/redSeekbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <SeekBar
        android:id="@+id/blueSeekbar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greenSeekbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/RGB"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/blueSeekbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:scaleType="centerCrop" />

</LinearLayout>